--- a/SparkPerso/SparkPerso/Info.plist
+++ b/SparkPerso/SparkPerso/Info.plist
@@ -19,7 +19,9 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>DJISDKAppKey</key>
-	<string>e696e317462648b8c795032d</string>
+	<string>9d01a5cd58029952c6291394</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>BLE</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -31,10 +33,10 @@
 	<string>Usage description</string>
 	<key>NSLocationUsageDescription</key>
 	<string>desc</string>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Usage description</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
